@@ -1,0 +1,5 @@
+# SPDX-License-Identifier: BSD-2-Clause
+# SPDX-FileCopyrightText: Copyright (c) 2020 Marian Sauer
+
+1. usb_descriptor_gen.c: Always use utf16_le encoding string descriptor. mbstowcs() depends on local settings.
+2. usb2_ulpi.v: Do not use VbusValid in standard periperhal. It may never be set if device is behind USB hubs.
