@@ -121,6 +121,8 @@ end component;
 
   signal async_reset_n : std_logic;
 
+  -- generated by daisho USB IP, asserted on falling edge of SessValid
+  signal reset_n_out : std_logic;
 begin
 
   -- rename signals for easier mapping
@@ -131,7 +133,7 @@ begin
   o_sdcard_cs  <= debug(4); -- SD_DAT3
   o_sdcard_nc  <= debug(5); -- SD_DAT2
 
-  debug <= b"00" & i_ulpi_dir & debug_clk_forward & async_reset_n & ulpi_reset_n;
+  debug <= "0" & dbg_linestate(1) & i_ulpi_dir & debug_clk_forward & async_reset_n & dbg_linestate(0);
   o_ulpi_reset_n <= ulpi_reset_n;
 
   buf_in_addr <= (others => '0');
